category smart alert logic